worker ram usage example

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <body>
     See the console.
     <script>
-        require('./client.js')
+        require('./renderer.js')
     </script>
   </body>
 </html>
